name:                rot13-closure
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/rot13-closure#readme
license:             BSD3
license-file:        LICENSE
author:              Techno Tecna
maintainer:          Techno Tecna
category:            Fun
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable rot13-closure
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Caesar
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.6.2.1,
                       deburr
